Corrección del tipado de las variables altura y base

--- a/area_triangulo_dada_h_b.html
+++ b/area_triangulo_dada_h_b.html
@@ -29,8 +29,8 @@
             let base = 0;
             let area = 0;
             
-            altura = window.prompt("Inserte la altura del triángulo:",4);
-            base = window.prompt("Inserte la base del triángulo:",4);
+            altura = Number(window.prompt("Inserte la altura del triángulo:",4));
+            base = Number(window.prompt("Inserte la base del triángulo:",4));
             
             //Operamos
             area = altura*base/2;
